support for multiple marker types

--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -21,7 +21,9 @@
 			"linechart": {
 				"fillArea": true,
 				"interpolation": "linear",
-				"showMarkers": true
+                "markers": {
+                    "enabled": true
+                }
 			},
 			"piechart": {
 				"innerRadius": 0.7
@@ -62,7 +64,7 @@
 				"data": ["Apples", "Oranges", "Pears", "Grapes", "Bananas"]
 			},
 			"series":{
-				"data": [{
+				"items": [{
 						"name": "John",
 						"data": [5, 3, 4, 7, 2]
 					}, {
