--- a/src/examples/area-spline.html
+++ b/src/examples/area-spline.html
@@ -21,7 +21,9 @@
 			"linechart": {
 				"fillArea": true,
 				"interpolation": "cardinal",
-				"showMarkers": true
+                "markers": {
+                    "enabled": true
+                }
 			},
 			"legend": {
 				"title": "Who?",
@@ -59,7 +61,7 @@
 				"data": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "John",
 						"data": [3, 4, 3, 5, 4, 10, 12]
 					}, {
