--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -21,7 +21,9 @@
 			"linechart": {
 				"fillArea": true,
 				"interpolation": "basic",
-				"showMarkers": true
+                "markers": {
+                    "enabled": true
+                }
 			},
 			"legend": {
 				"title": "Continent",
@@ -72,7 +74,7 @@
 				"data": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "Oceania",
 						"data": [2, 2, 2, 6, 13, 30, 46]
 					},
