--- a/src/examples/area-stacked.html
+++ b/src/examples/area-stacked.html
@@ -21,7 +21,9 @@
 			"linechart": {
 				"fillArea": true,
 				"interpolation": "cardinal",
-				"showMarkers": true
+                "markers": {
+                    "enabled": true
+                }
 			},
 			"legend": {
 				"title": "Continent",
@@ -59,7 +61,7 @@
 				"data": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "Asia",
 						"data": [502, 635, 809, 947, 1402, 3634, 5268]
 					},
