--- a/src/examples/area-stepbefore.html
+++ b/src/examples/area-stepbefore.html
@@ -21,7 +21,9 @@
 			"linechart": {
 				"fillArea": true,
 				"interpolation": "step-before",
-				"showMarkers": true
+                "markers": {
+                    "enabled": true
+                }
 			},
 			"legend": {
 				"title": "Who?",
@@ -60,7 +62,7 @@
 			},
 			"series": {
 				"animate": true,
-				"data": [{
+				"items": [{
 						"name": "John",
 						"data": [3, 4, 3, 5, 4, 10, 12]
 					}, {
