--- a/src/examples/bar-dual-axes.html
+++ b/src/examples/bar-dual-axes.html
@@ -21,7 +21,9 @@
 			"linechart": {
 				"fillArea": false,
 				"interpolation": "cardinal",
-				"showMarkers": true
+                "markers": {
+                    "enabled": true
+                }
 			},
 			"legend": {
 				"title": "Rainfall vs Temperature",
@@ -69,7 +71,7 @@
 			},
 			"series": {
 				"name": "Population",
-				"data":	[{
+				"items":	[{
 						"name": "Rainfall",
 						"data": [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4],
 						"type": "column",
