--- a/src/examples/bar-long-labels.html
+++ b/src/examples/bar-long-labels.html
@@ -51,7 +51,7 @@
 				"data": ["People living in Africa from 1800 until 2008", "People living in America from 1800 until 2008", "People living in Asia from 1800 until 2008", "People living in Europe from 1800 until 2008", "People living in Oceania from 1800 until 2008"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "Year 1800",
 						"data": [107, 31, 635, 203, 2],
                         "format": ","
