--- a/src/examples/bar-negative-stack.html
+++ b/src/examples/bar-negative-stack.html
@@ -69,7 +69,7 @@
 			},
 			"series": {
 				"animate": true,
-				"data": [{
+				"items": [{
 						"name": "Male",
 						"data": [-1746181, -1884428, -2089758, -2222362, -2537431, -2507081, -2443179,
 							-2664537, -3556505, -3680231, -3143062, -2721122, -2229181, -2227768,
