--- a/src/examples/bar-stacked.html
+++ b/src/examples/bar-stacked.html
@@ -54,7 +54,7 @@
 				"data": ["Apples", "Oranges", "Pears", "Grapes", "Bananas"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "John",
 						"data": [5, 3, 4, 7, 2]
 					}, {
