--- a/src/examples/column-stacked-percent.html
+++ b/src/examples/column-stacked-percent.html
@@ -59,7 +59,7 @@
 				"data": ["AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "DC", "FL", "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD", "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY"]
 			},
 			"series": { 
-				"data": [{
+				"items": [{
 						"name": 'Under 5 Years',
 						"data": [310504, 52083, 515910, 202070, 2704659, 358280, 211637, 59319, 36352, 1140516, 740521, 87207, 121746, 894368, 443089, 201321, 202529, 284601, 310716, 71459, 371787, 383568, 625526, 358471, 220813, 399450, 61114, 132092, 199175, 75297, 557421, 148323, 1208495, 652823, 41896, 743750, 266547, 243483, 737462, 60934, 303024, 58566, 416334, 2027307, 268916, 32635, 522672, 433119, 105435, 362277, 38253],
 					    "format": ","
