--- a/src/examples/area-basic.html
+++ b/src/examples/area-basic.html
@@ -21,7 +21,9 @@
 			"linechart": {
 				"fillArea": true,
 				"interpolation": "linear",
-				"showMarkers": false
+                "markers": {
+                    "enabled": false
+                }
 			},
 			"piechart": {
 				"innerRadius": 0.7
@@ -62,7 +64,7 @@
 				"data": ["1940", "1941", "1942", "1943", "1944", "1945", "1946", "1947", "1948", "1949", "1950", "1951", "1952", "1953", "1954", "1955", "1956", "1957", "1958", "1959", "1960", "1961", "1962", "1963", "1964", "1965", "1966", "1967", "1968", "1969", "1970", "1971", "1972", "1973", "1974", "1975", "1976", "1977", "1978", "1979", "1980", "1981", "1982", "1983", "1984", "1985", "1986", "1987", "1988", "1989", "1990", "1991", "1992", "1993", "1994", "1995", "1996", "1997", "1998", "1999", "2000", "2001", "2002", "2003", "2004", "2005", "2006"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 					"name": "USA",
 					"data": [null, null, null, null, null, 6, 11, 32, 110, 235, 369, 640,
 						1005, 1436, 2063, 3057, 4618, 6444, 9822, 15468, 20434, 24126,
