--- a/src/examples/bar-labels.html
+++ b/src/examples/bar-labels.html
@@ -51,7 +51,7 @@
 				"data": ["Africa", "America", "Asia", "Europe", "Oceania"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "Year 1800",
 						"data": [107, 31, 635, 203, 2]
 					}, {
