--- a/src/examples/column-dual-axes.html
+++ b/src/examples/column-dual-axes.html
@@ -67,7 +67,7 @@
 			},
 			"series": {
 				"name": "Population",
-				"data":	[{
+				"items":	[{
 						"name": "Rainfall",
 						"data": [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4],
 						"type": "column",
