--- a/src/examples/column-negative.html
+++ b/src/examples/column-negative.html
@@ -52,7 +52,7 @@
 				"data": ["Apples", "Oranges", "Pears", "Grapes", "Bananas"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 					name: "John",
 					data: [5, 3, 4, 7, 2]
 				}, {
