--- a/src/examples/line-labels.html
+++ b/src/examples/line-labels.html
@@ -21,7 +21,9 @@
 			"linechart": {
 				"fillArea": false,
 				"interpolation": "linear",
-				"showMarkers": true
+                "markers": {
+                    "enabled": true
+                }
 			},
 			"legend": {
 				"title": "City",
@@ -60,7 +62,7 @@
 				"data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "Tokyo",
 						"data": [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
 					}, {
