--- a/src/examples/pie-basic.html
+++ b/src/examples/pie-basic.html
@@ -40,7 +40,7 @@
 				"data": ["Firefox", "IE", "Safari", "Opera", "Others"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "Browsers",
 						"data": [45, 26.8, 8.5, 6.2, 0.7]
 					}]
