--- a/src/examples/pie-multiple-series.html
+++ b/src/examples/pie-multiple-series.html
@@ -40,7 +40,7 @@
 				"data": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
 			},
 			"series": {
-				"data": [{
+				"items": [{
 						"name": "Asia",
 						"data": [52, 635, 809, 947, 1402, 3634, 5268]
 					},
