--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -56,8 +56,8 @@
 				}
 			}],
 			"tooltip": {
-				"title": "Warheads",
-				"valueSuffix": " warheads"
+				"title": "Fruit Units",
+				"valueSuffix": " Fruit Units"
 			},
 			"categories": {
 				"format": "%s",
