--- a/src/examples/bar-basic.html
+++ b/src/examples/bar-basic.html
@@ -43,8 +43,8 @@
 				"tickmarks": true
 			}],
 			"tooltip": { 
-				"title": "Warheads",
-				"valueSuffix": " warheads"
+				"title": "Population",
+				"valueSuffix": " people"
 			},
 			"categories": {
 				"format": "%s",
