--- a/src/examples/bar-labels.html
+++ b/src/examples/bar-labels.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Bar Chart - Basic</title>
+    <title>Bar Chart - Labels</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
@@ -24,7 +24,7 @@
 				"width": 200
 			},
 			"title": {
-				"text": "Bar Chart - Basic",
+				"text": "Bar Chart - Labels",
 				"align": "center",
 				"height": 50
 			},
@@ -43,8 +43,8 @@
 				"tickmarks": true
 			}],
 			"tooltip": { 
-				"title": "Warheads",
-				"valueSuffix": " warheads"
+				"title": "Population",
+				"valueSuffix": " people"
 			},
 			"categories": {
 				"format": "%s",
