--- a/src/examples/bar-long-labels.html
+++ b/src/examples/bar-long-labels.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Bar Chart - Basic</title>
+    <title>Bar Chart - Long Labels</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
@@ -24,7 +24,7 @@
 				"width": 200
 			},
 			"title": {
-				"text": "Bar Chart - Basic",
+				"text": "Bar Chart - Long Labels",
 				"align": "center",
 				"height": 50
 			},
