--- a/src/examples/bar-stacked.html
+++ b/src/examples/bar-stacked.html
@@ -46,8 +46,8 @@
 				}
 			}],
 			"tooltip": { 
-				"title": "Warheads",
-				"valueSuffix": " warheads"
+				"title": "Fruit Units",
+				"valueSuffix": " fruits"
 			},
 			"categories": {
 				"format": "%s",
