ability to set size of markers

--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -23,7 +23,8 @@
 				"interpolation": "basic",
                 "markers": {
                     "enabled": true,
-                    "type": "circle"
+                    "type": "circle",
+                    "size": 6
                 }
 			},
 			"legend": {
@@ -89,7 +90,8 @@
 					},
 					{
 						"name": "Europe",
-						"data": [163, 203, 276, 408, 547, 729, 628]
+						"data": [163, 203, 276, 408, 547, 729, 628],
+                        "marker": "diamond"
 					},
 					{
 						"name": "America",
