--- a/src/examples/area-stacked.html
+++ b/src/examples/area-stacked.html
@@ -22,7 +22,8 @@
 				"fillArea": true,
 				"interpolation": "cardinal",
                 "markers": {
-                    "enabled": true
+                    "enabled": true,
+                    "type": "circle"
                 }
 			},
 			"legend": {
