--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -19,7 +19,9 @@
 				"padding": 20
 			},
 			"linechart": {
-				"fillArea": true,
+                "area": {
+                    "enabled": true
+                },
 				"interpolation": "basic",
                 "markers": {
                     "enabled": true,
