--- a/src/examples/area-dual-axes.html
+++ b/src/examples/area-dual-axes.html
@@ -13,18 +13,16 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"linechart": {
                 "area": {
-                    "enabled": true
+                    "visible": true
                 },
 				"interpolation": "linear",
                 "markers": {
-                    "enabled": true,
+                    "visible": true,
                     "type": "circle"
                 }
 			},
@@ -86,17 +84,10 @@
 						"type": "line",
 						"suffix": " °C"
 					}]
-			},
-
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.LineChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.LineChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
