--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -13,18 +13,16 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"linechart": {
                 "area": {
-                    "enabled": true
+                    "visible": true
                 },
 				"interpolation": "linear",
                 "markers": {
-                    "enabled": true
+                    "visible": true
                 }
 			},
 			"piechart": {
@@ -76,16 +74,10 @@
 						"name": "Joe",
 						"data": [3, 4, 4, -2, 5]
 				}]
-			},
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.LineChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.LineChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
