--- a/src/examples/bar-dual-axes.html
+++ b/src/examples/bar-dual-axes.html
@@ -13,9 +13,7 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"legend": {
@@ -76,17 +74,10 @@
 						"type": "line",
 						"suffix": " °C"
 					}]
-			},
-
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.BarChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.BarChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
