--- a/src/examples/line-stacked.html
+++ b/src/examples/line-stacked.html
@@ -13,15 +13,13 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"linechart": {
 				"interpolation": "linear",
                 "markers": {
-                    "enabled": false
+                    "visible": false
                 }
 			},
 			"legend": {
@@ -76,16 +74,10 @@
 					"data": [25.94, 28.66, 33.95, 31.01, 21, 26.19, 25.41, 30.47, 12.88, 9.78, 8.25, 7.44, 10.81, 9.12, 11.03, 12.74, 9.98, 11.62, 9.4, 9.27, 7.76, 8.78, 10.65, 10.95, 12.36, 10.85, 11.84, 12.14, 11.65, 8.86, 7.63, 7.38, 7.25, 8.03, 7.75, 7.16, 7.18, 7.51, 7.07, 7.11, 8.98, 9.53, 10.54, 11.31, 10.36, 11.44, 10.45, 10.69, 11.28, 11.96, 13.52, 12.89, 14.03, 16.27, 16.17, 17.25, 19.38, 26.2, 33.53, 32.2, 38.45, 44.86, 41.67, 36.06, 39.76, 36.81, 42.65, 46.89, 53.61, 57.59, 67.82, 71.89, 75.51, 68.49, 62.72, 70.39, 59.77, 57.27, 67.96, 67.85, 76.98, 81.08, 91.66, 84.84, 85.73, 84.61, 92.91, 99.8, 121.19, 122.04, 131.76, 138.48, 153.47, 189.95, 182.22, 198.08, 135.36, 125.02, 143.5, 173.95, 188.75, 167.44, 158.95, 169.53, 113.66, 107.59, 92.67, 85.35, 90.13, 89.31, 105.12, 125.83, 135.81, 142.43, 163.39, 168.21, 185.35, 188.5, 199.91, 210.73],
 					"name": "Apple"
 				  }]
-			},
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0,
-					"outerPadding": 1
-				}
-			}		
+			}
 		};
 
-		var chart = new frnk.UI.Charts.StackedLineChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.StackedLineChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
