--- a/src/examples/area-basic.html
+++ b/src/examples/area-basic.html
@@ -13,64 +13,62 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
-				"padding": 20
+            plotArea: {
+				padding: 20
 			},
-			"linechart": {
-                "area": {
-                    "enabled": true
+			linechart: {
+                area: {
+                    visible: true
                 },
-				"interpolation": "linear",
-                "markers": {
-                    "enabled": false
+				interpolation: "linear",
+                markers: {
+                    visible: false
                 }
 			},
-			"piechart": {
-				"innerRadius": 0.7
+			piechart: {
+				innerRadius: 0.7
 			},
-			"legend": {
-				"title": "Country",
-				"position": "right",
-				"width": 200
+			legend: {
+				title: "Country",
+				position: "right",
+				width: 200
 			},
-			"title": {
-				"text": "Area Chart - Basic",
-				"align": "center",
-				"height": 50
+			title: {
+				text: "Area Chart - Basic",
+				align: "center",
+				height: 50
 			},
-			"xAxis": [{
-				"gridlines": "none",
-				"labels": {
-					"rotate": 0
+			xAxis: [{
+				gridlines: "none",
+				labels: {
+					rotate: 0
 				},
-				"tickmarks": true,
-				"title": { 
-					"text": "Year",
-                    "align": "right"
+				tickmarks: true,
+				title: {
+					text: "Year",
+                    align: "right"
 				}
 			}],
-			"yAxis": [{
-				"gridlines": "none",
-				"tickmarks": false,
-				"title": {
-					"text": "Nuclear weapon status",
-                    "valign": "top"
+			yAxis: [{
+				gridlines: "none",
+				tickmarks: false,
+				title: {
+					text: "Nuclear weapon status",
+                    valign: "top"
 				}
 			}],
-			"tooltip": { 
-				"title": "Warheads",
-				"valueSuffix": " warheads"
+			tooltip: {
+				title: "Warheads",
+				valueSuffix: " warheads"
 			},
-			"categories": {
-				"format": "%Y",
-				"data": ["1940", "1941", "1942", "1943", "1944", "1945", "1946", "1947", "1948", "1949", "1950", "1951", "1952", "1953", "1954", "1955", "1956", "1957", "1958", "1959", "1960", "1961", "1962", "1963", "1964", "1965", "1966", "1967", "1968", "1969", "1970", "1971", "1972", "1973", "1974", "1975", "1976", "1977", "1978", "1979", "1980", "1981", "1982", "1983", "1984", "1985", "1986", "1987", "1988", "1989", "1990", "1991", "1992", "1993", "1994", "1995", "1996", "1997", "1998", "1999", "2000", "2001", "2002", "2003", "2004", "2005", "2006"]
+			categories: {
+				format: "%Y",
+				data: ["1940", "1941", "1942", "1943", "1944", "1945", "1946", "1947", "1948", "1949", "1950", "1951", "1952", "1953", "1954", "1955", "1956", "1957", "1958", "1959", "1960", "1961", "1962", "1963", "1964", "1965", "1966", "1967", "1968", "1969", "1970", "1971", "1972", "1973", "1974", "1975", "1976", "1977", "1978", "1979", "1980", "1981", "1982", "1983", "1984", "1985", "1986", "1987", "1988", "1989", "1990", "1991", "1992", "1993", "1994", "1995", "1996", "1997", "1998", "1999", "2000", "2001", "2002", "2003", "2004", "2005", "2006"]
 			},
-			"series": {
-				"items": [{
-					"name": "USA",
-					"data": [0, 0, 0, 0, 0, 6, 11, 32, 110, 235, 369, 640,
+			series: {
+				items: [{
+					name: "USA",
+					data: [0, 0, 0, 0, 0, 6, 11, 32, 110, 235, 369, 640,
 						1005, 1436, 2063, 3057, 4618, 6444, 9822, 15468, 20434, 24126,
 						27387, 29459, 31056, 31982, 32040, 31233, 29224, 27342, 26662,
 						26956, 27912, 28999, 28965, 27826, 25579, 25722, 24826, 24605,
@@ -79,8 +77,8 @@
 						10871, 10824, 10577, 10527, 10475, 10421, 10358, 10295, 10104]
 				},
 				{
-					"name":	"USSR/Russia",
-					"data":	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+					name:	"USSR/Russia",
+					data:	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
 						5, 25, 50, 120, 150, 200, 426, 660, 869, 1060, 1605, 2471, 3322,
 						4238, 5221, 6129, 7089, 8339, 9399, 10538, 11643, 13092, 14478,
 						15915, 17385, 19055, 21205, 23044, 25393, 27935, 30062, 32049,
@@ -88,16 +86,10 @@
 						35000, 33000, 31000, 29000, 27000, 25000, 24000, 23000, 22000,
 						21000, 20000, 19000, 18000, 18000, 17000, 16000]
 				}]
-			},
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.LineChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.LineChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
