--- a/src/examples/bar-basic.html
+++ b/src/examples/bar-basic.html
@@ -13,9 +13,7 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"legend": {
@@ -61,16 +59,10 @@
 						"name": "Year 2008",
 						"data": [973, 914, 4054, 732, 34]
 					}]
-			},
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.BarChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.BarChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
