--- a/src/examples/column-basic.html
+++ b/src/examples/column-basic.html
@@ -13,9 +13,7 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"legend": {
@@ -74,18 +72,12 @@
 
 				}], 
 				"labels": {
-				    "enabled": false
+				    "visible": false
                 }
-			},
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.ColumnChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.ColumnChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
