--- a/src/examples/column-dual-axes.html
+++ b/src/examples/column-dual-axes.html
@@ -13,9 +13,7 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"legend": {
@@ -79,17 +77,10 @@
 						"type": "line",
 						"suffix": " °C"
 					}]
-			},
-
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.ColumnChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.ColumnChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
