--- a/src/examples/column-negative.html
+++ b/src/examples/column-negative.html
@@ -13,9 +13,7 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"legend": {
@@ -62,16 +60,10 @@
 					name: "Joe",
 					data: [3, 4, 4, -2, 5]
 				}]
-			},
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.ColumnChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.ColumnChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
