--- a/src/examples/column-stacked.html
+++ b/src/examples/column-stacked.html
@@ -13,9 +13,7 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"legend": {
@@ -81,16 +79,10 @@
 						name: '65 Years and Over',
 						data: [641667, 50277, 862573, 407205, 4114496, 511094, 478007, 121688, 70648, 3187797, 981024, 190067, 182150, 1575308, 813839, 444554, 366706, 565867, 540314, 199187, 679565, 871098, 1304322, 650519, 371598, 805235, 137312, 240847, 296717, 169978, 1150941, 260051, 2607672, 1139052, 94276, 1570837, 490637, 503998, 1910571, 147646, 596295, 116100, 819626, 2472223, 246202, 86649, 940577, 783877, 285067, 750146, 65614]
 					}]
-			},
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.StackedColumnChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.StackedColumnChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
