--- a/src/examples/line-basic.html
+++ b/src/examples/line-basic.html
@@ -13,15 +13,13 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"linechart": {
 				"interpolation": "linear",
                 "markers": {
-                    "enabled": true
+                    "visible": true
                 }
 			},
 			"legend": {
@@ -79,16 +77,10 @@
 						"data": [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8],
                         "marker": "cross"
 					}]
-			},
-			"plotOptions": {
-				"general": {
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.LineChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.LineChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
