--- a/src/examples/line-rotated-cat-labels.html
+++ b/src/examples/line-rotated-cat-labels.html
@@ -13,15 +13,13 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"linechart": {
 				"interpolation": "cardinal",
                 "markers": {
-                    "enabled": true
+                    "visible": true
                 }
 			},
 			"legend": {
@@ -85,17 +83,10 @@
 						"type": "line",
 						"suffix": " °C"
 					}]
-			},
-
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.LineChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.LineChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
