--- a/src/examples/pie-multiple-series.html
+++ b/src/examples/pie-multiple-series.html
@@ -13,9 +13,7 @@
     <div id="chart" />
     <script>
 		var settings = {
-			"canvas": {
-				"height": 300,
-				"width": 600,
+			"plotArea": {
 				"padding": 20
 			},
 			"piechart": {
@@ -60,16 +58,10 @@
 						"name": "Oceania",
 						"data": [50, 20, 20, 60, 130, 300, 460]
 				}]
-			},
-			"plotOptions": {
-				"general": { 
-					"innerPadding": 0.1,
-					"outerPadding": 0.5
-				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.PieChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.PieChart("#chart", settings);
 		chart.draw();
     </script>
 </body>
